Fix filters sidebar bug on mobile

--- a/app/assets/stylesheets/config/_layout.scss
+++ b/app/assets/stylesheets/config/_layout.scss
@@ -15,7 +15,7 @@ body {
         z-index: 3;
         min-width: 40%;
         max-width: 40%;
-        height: 100vh;
+        height: 100%;
         margin-left: -40%;
         transition: all 0.3s;
         background-color: white;
